--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ReceitasApp</string>
     <string name="help_login">Esqueceu seus dados de login? <font color='#3498db'>Obtenha ajuda para entrar.</font></string>
     <string name="cadastrar">Não tem uma conta? <font color='#3498db'>Cadastre-se.</font></string>
+    <string name="cadastro_sucesso">Usuário cadastrado com sucesso</string>
 </resources>
